--- a/0_PYTHON_NUMERICO_BASICO/0.1_python_basico.ipynb
+++ b/0_PYTHON_NUMERICO_BASICO/0.1_python_basico.ipynb
@@ -10,11 +10,13 @@
     "\n",
     "Os programas Python, em geral, não são compilados em código de máquina, mas são executados por um interpretador. A grande vantagem de uma linguagem interpretada é que os programas podem ser testados e depurados facilmente, permitindo ao usuário concentrar-se mais na lógia e funcionalmento do programa do que com a sintaxe e escrita do programa. Como não há necessidade de compilar, vincular e executar após cada correção, os programas Python podem ser desenvolvidos em tempo muito mais curto do que os programas Fortran ou C equivalentes. Uma desvantagem é que os programas interpretados não produzem aplicativos autônomos, ou seja, para serem executados, é preciso um computador com o interpretador python instalado.\n",
     "\n",
-    "Python também tem outras vantagens sobre as outras liguagens mais utilizadas que são importantes em uma ambiente de aprendizagem:\n",
+    "Python também tem outras vantagens sobre as outras liguagens mais utilizadas que são importantes em uma ambiente de aprendizagem: \n",
+    "* é _código aberto_, o que significa que é gratuito; \n",
+    "* está incluído na maioria das distribuições linux e disponível para a maioria dos sitemas operacionais. Um programa pode ser executado em diferentes sistemas sem necessitar de modificações;\n",
+    "* é fácil de aprender e produz códigos mais legíveis que a maioria das linguagens de programação;\n",
+    "* as suas extensões são fáceis de instalar e usar;\n",
+    "* python implementa conceitos comuns de orientação a objeto, tais como, classes, métodos, instâncias, etc;\n",
     "\n",
-    "\n",
-    "is an open-source software, which means that it is free; it is included in mostLinuxdistributions. • Python is available for all major operating systems (Linux, Unix, Windows, Mac OS, and so on). A program written on one system runs without modiﬁcation on allsystems.\n",
-    " Pythoniseasiertolearnandproducesmorereadablecodethanmostlanguages. • Pythonanditsextensionsareeasytoinstall. DevelopmentofPythonhasbeenclearlyinﬂuencedbyJavaandC++,butthereis alsoaremarkablesimilaritytoMATLABR (anotherinterpretedlanguage,verypopular in scientiﬁc computing). Python implements the usual concepts of object-oriented languages such as classes, methods, inheritance etc. We do not use object-oriented programming in this text. The only object that we need is the N-dimensional array availableinthemodule numpy (thismoduleisdiscussedlaterinthischapter). \n",
     "\n",
     "## Tipos de dados e operações básicas\n",
     "\n",
@@ -28,7 +30,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -86,7 +90,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -148,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -175,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "ZeroDivisionError",
@@ -196,7 +206,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "ZeroDivisionError",
@@ -224,7 +236,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -251,7 +265,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -278,7 +294,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -305,7 +323,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -325,7 +345,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -345,7 +367,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -375,7 +399,9 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -402,7 +428,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a= 18.6\n",
@@ -415,7 +443,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "round(18.6)"
@@ -424,7 +454,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "float(1)"
@@ -433,7 +465,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "complex(2)"
@@ -442,7 +476,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "str(256568)  #variável de tipo string."
@@ -458,7 +494,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = 2.\n",
@@ -468,7 +506,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "isinstance(a, float)"
@@ -484,7 +524,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print('Bem vindos ao curso de cálculo numérico')"
@@ -493,7 +535,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "max(1,5,8,7)"
@@ -502,7 +546,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "min(-1,1,0)"
@@ -545,7 +591,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = 1 + 2j"
@@ -561,7 +609,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "b = 3.14159\n",
@@ -578,7 +628,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -606,7 +658,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x, y = y, x\n",
@@ -630,7 +684,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x == y"
@@ -639,7 +695,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -659,7 +717,9 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -676,7 +736,9 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -699,7 +761,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -728,7 +792,9 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -750,7 +816,9 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -771,7 +839,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -798,7 +868,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -818,7 +890,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -838,7 +912,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -858,7 +934,9 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -879,7 +957,9 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -911,7 +991,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -943,7 +1025,9 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -973,7 +1057,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1001,7 +1087,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1023,7 +1111,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -1050,7 +1140,9 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "ename": "TypeError",
@@ -1079,7 +1171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "2 in uma_lista"
@@ -1095,7 +1189,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "len(uma_lista)"
@@ -1111,7 +1207,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "uma_lista.append(-14)\n",
@@ -1128,7 +1226,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "uma_lista.remove(-14)\n",
@@ -1145,7 +1245,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "uma_lista.pop(3) # Elimina o elemento na posição 3 começando desde 0; isto é, elimina o quarto elemento da lista\n",
@@ -1169,7 +1271,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1207,7 +1311,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "print(uma_lista)\n",
@@ -1238,7 +1344,8 @@
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {
-    "cell_tags": []
+    "cell_tags": [],
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1250,7 +1357,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "cell_tags": []
+    "cell_tags": [],
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1287,7 +1395,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def kelvin_to_celsius(temp):\n",
@@ -1298,7 +1408,8 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {
-    "cell_tags": []
+    "cell_tags": [],
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1324,7 +1435,8 @@
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {
-    "cell_tags": []
+    "cell_tags": [],
+    "collapsed": false
    },
    "outputs": [
     {
@@ -1349,7 +1461,9 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "?fahr_to_celsius"
@@ -1377,7 +1491,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# preserve\n",
@@ -1404,7 +1520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
