--- a/4_ZEROS_DE_POLINOMIOS/4.1_conceitos_fundamentais.ipynb
+++ b/4_ZEROS_DE_POLINOMIOS/4.1_conceitos_fundamentais.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4.1 Localização de Raízes\n",
+    "# 4.1 Conceitos fundamentais \n",
     "\n",
     "\n",
     "Desejamos, agora, utilizar métodos numéricos para determinar $\\overline x$ tal que $P(\\overline x) = 0$, em que $P(x)$ é um polinômio de grau $n \\in N$, com coeficientes reais ou complexos na forma:\n",
@@ -68,6 +68,15 @@
     "\n",
     "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/3.3_exemplo_1loc.png\" width=\"400\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
