--- a/4_ZEROS_DE_POLINOMIOS/4.1_conceitos_fundamentais.ipynb
+++ b/4_ZEROS_DE_POLINOMIOS/4.1_conceitos_fundamentais.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Desejamos, agora, utilizar métodos numéricos para determinar $\\overline x$ tal que $P(\\overline x) = 0$, em que $P(x)$ é um polinômio de grau $n \\in N$, com coeficientes reais ou complexos na forma:\n",
     "\n",
-    "$$P(x)=a_0 x^n + a_1 x^{n−1}+···+a_{n−1}x+a_n$$ \n",
+    "$$P(x)=a_0 x^n + a_1 x^{n-1}+...+a_{n-1}x+a_n$$ \n",
     "\n",
     "e $a_0 \\neq 0$.\n",
     "\n",
@@ -19,7 +19,7 @@
     "\n",
     "_Seja $P(x)$ um polinômio de grau $n \\geq 1$, então para qualquer $\\alpha \\in R$ existe um único polinômio $Q(x)$ de grau $(n −1)$ tal que_\n",
     "\n",
-    "$$P(x) = (x − \\alpha)Q(x)+P(\\alpha)$$\n",
+    "$$P(x) = (x-\\alpha)Q(x)+P(\\alpha)$$\n",
     "\n",
     "_em que $P(\\alpha)$ é o resto da divisão de $P(x)$ por $(x -\\alpha)$._\n"
    ]
@@ -29,7 +29,7 @@
    "metadata": {},
    "source": [
     "** Exemplo**\n",
-    "A divisão do polinômio $P(x) = 6x^2 − 4x + 2$ pelo polinômio $(x − 4)$ resulta $Q(x)=6x+20 $ e o resto desta divisão, $P(4)=82$.\n"
+    "A divisão do polinômio $P(x) = 6x^2 -4x + 2$ pelo polinômio $(x - 4)$ resulta $Q(x)=6x+20 $ e o resto desta divisão, $P(4)=82$.\n"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "source": [
     "### Teorema: Localização de raízes no círculo\n",
     "\n",
-    "Sejam $P(x)=a_0 x^n + a_1 x^{n−1}+···+a_{n−1}x+a_n$ e $A=máx\\{\\left|a_1 \\right|,..., \\left|a_n \\right|\\}$. Então, o módulo de todas as raízes $x_k$ , $k = 1,... , n$ satisfaz a inequação:\n",
+    "Sejam $P(x)=a_0 x^n + a_1 x^{n-1}+···+a_{n-1}x+a_n$ e $A=máx\\{\\left|a_1 \\right|,..., \\left|a_n \\right|\\}$. Então, o módulo de todas as raízes $x_k$ , $k = 1,... , n$ satisfaz a inequação:\n",
     "\n",
     "$$ |x_k|< 1 +\\frac{A}{\\left|a_0 \\right|} = R$$\n",
     "\n",
@@ -66,7 +66,7 @@
    "source": [
     "Assim, no plano complexo as raízes de $P(x) = 0$ estão localizadas no anel $r < |x| < R$ como ilustra a figura abaixo.\n",
     "\n",
-    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/3.3_exemplo_1loc.png\" width=\"400\">"
+    "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/4_ZEROS_DE_POLINOMIOS/imagens/anel.png\" width=\"400\">"
    ]
   },
   {
