--- a/4_ZEROS_DE_POLINOMIOS/4.1_conceitos_fundamentais.ipynb
+++ b/4_ZEROS_DE_POLINOMIOS/4.1_conceitos_fundamentais.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "### Teorema: Localização de raízes no círculo\n",
     "\n",
-    "Sejam $P(x)=a_0 x^n + a_1 x^{n-1}+...+a_{n-1}x+a_n$ e $A=máx\\{\\left|a_1 \\right|,..., \\left|a_n \\right|\\}$. Então, o módulo de todas as raízes $x_k$ , $k = 1,... , n$ satisfaz a inequação:\n",
+    "Sejam $P(x)=a_0 x^n + a_1 x^{n-1}+...+a_{n-1}x+a_n$ e $A=max\\{\\left|a_1 \\right|,..., \\left|a_n \\right|\\}$. Então, o módulo de todas as raízes $x_k$ , $k = 1,... , n$ satisfaz a inequação:\n",
     "\n",
     "$$ |x_k|< 1 +\\frac{A}{\\left|a_0 \\right|} = R$$\n",
     "\n",
@@ -53,7 +53,7 @@
    "source": [
     "Como consequência desse teorema, tem-se o seguinte **corolário**: \n",
     "\n",
-    "Sejam $a_n\\neq 0$ e $B=máx\\{\\left|a_0 \\right|,...,\\left|a_{n−1}\\right|\\}$, em que $a_k$,$k=0,...,n$ são os coeficientes de $P(x)$. Então, o módulo de todas as raízes $x_k$, $k = 1,..., n$ satisfaz a inequação:\n",
+    "Sejam $a_n\\neq 0$ e $B=max\\{\\left|a_0 \\right|,...,\\left|a_{n-1}\\right|\\}$, em que $a_k$,$k=0,...,n$ são os coeficientes de $P(x)$. Então, o módulo de todas as raízes $x_k$, $k = 1,..., n$ satisfaz a inequação:\n",
     "\n",
     "$$ \\left|x_k \\right| > \\frac{1}{1+\\frac{B}{\\left|a_n \\right|}}=r$$\n",
     "\n",
