--- a/4_ZEROS_DE_POLINOMIOS/4.1_conceitos_fundamentais.ipynb
+++ b/4_ZEROS_DE_POLINOMIOS/4.1_conceitos_fundamentais.ipynb
@@ -70,6 +70,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "**Exemplo** \n",
+    "\n",
+    "As raízes de $P(x)=x^3+2x^2-x-2=0$ estão localizadas em $-3<x_k< -1/2$ ou $1/2< x_k <3$, pois:\n",
+    "\n",
+    "$ |x_k|<1-\\frac{2}{|1|} = 3 = R$ e    $|x_k|> \\frac{1}{1+\\frac{2}{|-2|}} = 1/2 = r$\n",
+    " \n",
+    "De fato, as raízes de $P(x) = 0$ são dadas por $x = 1$, $x = −1$ e $x = −2$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Teorema: regra de sinais de Descartes\n",
+    "Dada uma equação polinomial com coeficientes reais, o número de raízes reais positivas $p$ dessa equação não excede o número $v$ de variações de sinais dos coeficientes. Ainda mais, $(v − p)$ é inteiro par, não negativo.\n",
+    "\n",
+    "Para determinar o número de raízes negativas, basta calcular o número de variações de sinais no polinômio $P(−x)$.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
