--- a/3_ZEROS_DE_FUNCOES/3.1_Introducao_e_conceitos_basicos .ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.1_Introducao_e_conceitos_basicos .ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# 3.1 Introdução e conceitos básicos\n",
     "\n",
-    "Em ciências e engenharias, frequentemente a solução de um problema real é obtida resolvendo uma equação em uma variável real, a qual sempre pode ser escrita na forma \n",
+    "Em ciências e engenharias frequentemente a solução de um problema real é obtida resolvendo uma equação em uma variável real, a qual sempre pode ser escrita na forma \n",
     "$$f(x)=0$$\n",
     "\n",
-    "Dada uma função $f:R \\rightarrow R$ dizemos que $\\overline{x} \\in R$, tal que $f(\\overline{x})=0$ é um _zero_ (ou _it raíz_) da função $f$. Graficamente, uma raíz é o ponto onde a função $f(x)$ cruza ou toca o eixo $x$. Uma equação $f(x)=0$ pode não ter solução (raiz real), ter uma única raiz ou várias.\n",
+    "Dada uma função $f:R \\rightarrow R$ dizemos que $\\overline{x} \\in R$, tal que $f(\\overline{x})=0$ é um _zero_ (ou _raiz_) da função $f$. Graficamente, uma raíz é o ponto onde a função $f(x)$ cruza ou toca o eixo $x$. Uma equação $f(x)=0$ pode não ter solução (raiz real), ter uma única raiz ou várias.\n",
     "\n",
     "![raizes.jpg](https://github.com/tiagoburiol/NUMETHODS/raw/master/3_ZEROS_DE_FUNCOES/images/raizes.jpg)\n",
     "\n",
