--- a/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
+++ b/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
@@ -121,9 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -218,6 +216,61 @@
     "\n",
     "print (gaussElimin(A,b))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[3.         2.         4.        ]\n",
+      " [0.         0.33333333 0.66666667]\n",
+      " [4.         2.55555556 1.11111111]]\n",
+      "[[ 3.          2.          4.        ]\n",
+      " [ 0.          0.33333333  0.66666667]\n",
+      " [ 4.          0.         -4.        ]]\n",
+      "[[ 3.          2.          4.        ]\n",
+      " [ 0.          0.33333333  0.66666667]\n",
+      " [ 4.          0.         -4.        ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "A = np.array([[ 3.,2.,4.],\n",
+    "              [ 1.,1.,2.],\n",
+    "              [4.,3.,2.]])\n",
+    "\n",
+    "b = np.array([1., 2., 3.])\n",
+    "\n",
+    "n = len(b)\n",
+    " \n",
+    "\n",
+    "for j in range(0,n):\n",
+    "    for i in range(j+1,n):\n",
+    "        mij = A[i][j]/A[j][j]\n",
+    "        A[i][j:n] = A[i][j:n] - mij*A[i-1][j:n]\n",
+    "        \n",
+    "    print (A)\n",
+    "              \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -236,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
