--- a/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
+++ b/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
@@ -219,22 +219,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[3.         2.         4.        ]\n",
-      " [0.         0.33333333 0.66666667]\n",
-      " [4.         2.55555556 1.11111111]]\n",
-      "[[ 3.          2.          4.        ]\n",
-      " [ 0.          0.33333333  0.66666667]\n",
-      " [ 4.          0.         -4.        ]]\n",
-      "[[ 3.          2.          4.        ]\n",
-      " [ 0.          0.33333333  0.66666667]\n",
-      " [ 4.          0.         -4.        ]]\n"
+      "[[ 3.      2.      4.    ]\n",
+      " [ 0.      0.3333  0.6667]\n",
+      " [ 0.      0.     -4.    ]] [ 1.00000000e+00  1.66666667e+00 -4.44089210e-16]\n"
      ]
     }
    ],
@@ -252,9 +246,9 @@
     "for j in range(0,n):\n",
     "    for i in range(j+1,n):\n",
     "        mij = A[i][j]/A[j][j]\n",
-    "        A[i][j:n] = A[i][j:n] - mij*A[i-1][j:n]\n",
-    "        \n",
-    "    print (A)\n",
+    "        A[i][j:n] = A[i][j:n] - mij*A[j][j:n]\n",
+    "        b[i] = b[i] - mij*b[j] \n",
+    "print (np.round(A,4), b)\n",
     "              \n"
    ]
   },
