--- a/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
+++ b/2_SISTEMAS_LINEARES/2.3_metodo_da_eliminacao_de_gauss.ipynb
@@ -120,8 +120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -189,11 +191,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3. -7.  6.]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from numpy import dot\n",
@@ -219,16 +229,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 3.      2.      3.    ]\n",
-      " [ 0.      0.3333  1.    ]\n",
-      " [ 0.      0.     -3.    ]] [ 1.00000000e+00  1.66666667e+00 -4.44089210e-16]\n"
+      "[[ 3.      2.      4.    ]\n",
+      " [ 0.      0.3333  0.6667]\n",
+      " [ 0.      0.     -4.    ]] [  1.00000000e+00   1.66666667e+00  -4.44089210e-16]\n"
      ]
     }
    ],
@@ -255,14 +267,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -283,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
